fix(stylesheet) remove unwanted spacing from popup menu ornament, remove min-width from overflow popup

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,11 @@
+.TrayIndicatorPopup {
+	min-width: auto;
+}
+
+.TrayIndicatorPopup .popup-menu-ornament {
+	width: 0;
+}
+
 .TrayIndicatorPopup StButton {
 	padding: 8px;
 	border-radius: 6px;
